using minimize images

--- a/prepros.config
+++ b/prepros.config
@@ -93,8 +93,8 @@
         "grid": "autoplace",
         "browsers": [
           "> 2%",
-          "not dead",
-          ">5%"
+          ">5%",
+          "dead"
         ],
         "sourceMap": false
       },
